services/admin/service.yaml
#@ load("@ytt:data", "data")
#@ app = data.values.admin
---
apiVersion: v1
kind: Service
metadata:
  name: #@ app.serviceName
  namespace: #@ app.namespace
  #! annotations: #! container-native load balancing - try this out
  #!    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    name: #@ app.appName
  type: ClusterIP
  ports:
    - name: http
      port: #@ app.appPort
      targetPort: #@ app.appPort
      protocol: TCP
